# creole

./: CMakeLists.txt  README.md  creole.sln
.github/workflows/: build-and-test.yml  main.yml  msbuild-and-tests.yml
Tests/: PhysicsWorldTests.cpp  Tests.cpp  Tests.vcxproj  Tests.vcxproj.filters  Vector3Tests.cpp  pch.h
creole/: Creole.h  PhysicsWorld.cpp  PhysicsWorld.h  SFMLManager.cpp  SFMLManager.h  Vector3.cpp  Vector3.h  creole.cpp  creole.vcxproj  creole.vcxproj.filters  main.cpp
